# record-set-go

./: .gitignore  Cargo.toml  README.md  deny.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
demo/: apply.html  config.toml  example.com.journal  example.com.zone  hickory.toml  run.sh
src/: lib.rs  main.rs  templates.rs
templates/: apply.html
tests/dns/: hickory.toml
